back ground added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,35 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="src/styles/output.css">
 </head>
-<body>
-    
+<body class="overflow-hidden">
+    <main class="w-full h-[100vh] bgColor overflow-hidden">
+        <div class="bubbles absolute bottom-[-120px] flex flex-wrap mt-[70px] w-full justify-around">
+            <span class="one bubble"></span>
+            <span class="two bubble"></span>
+            <span class="three bubble"></span>
+            <span class="four bubble"></span>
+            <span class="five bubble"></span>
+            <span class="six bubble"></span>
+            <span class="seven bubble"></span>
+        </div>
+        <div class="bubbles absolute bottom-[-120px] flex flex-wrap mt-[70px] w-full justify-around">
+            <span class="one bubble"></span>
+            <span class="two bubble"></span>
+            <span class="three bubble"></span>
+            <span class="four bubble"></span>
+            <span class="five bubble"></span>
+            <span class="six bubble"></span>
+            <span class="seven bubble"></span>
+        </div>
+        <div class="bubbles absolute bottom-[-120px] flex flex-wrap mt-[70px] w-full justify-around">
+            <span class="one bubble"></span>
+            <span class="two bubble"></span>
+            <span class="three bubble"></span>
+            <span class="four bubble"></span>
+            <span class="five bubble"></span>
+            <span class="six bubble"></span>
+            <span class="seven bubble"></span>
+        </div>
+    </main>
 </body>
 </html>
