AC and DEL button added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <span class="seven bubble"></span>
         </div>
         <div class="z-12 p-[15px] w-[420px] rounded-[12px] bg-[rgba(255,255,255,0.1)] shadow-[0 20px 50px] shadow-[rgba(0,0,0,0.15)] border-t border-l border-[rgba(255,255,255,0.5)]">
-            <form action="#" name="forms">
-                <input class="txt" type="text" name="answer">
+            <form id="calculator" action="#" name="forms">
+                <input id="txt" class="txt" type="text" name="answer" placeholder="0">
                 <div class="">
                     <input class="btn" type="button" value="AC">
                     <input class="btn" type="button" value="DEL">
